update style - fix overflow table - fix overflow text in sidebar

--- a/src/assets/css/markdown.css
+++ b/src/assets/css/markdown.css
@@ -43,6 +43,10 @@
   margin: 16px 0;
   font-size: 14px;
   line-height: 1.5;
+
+  display: block;
+  max-width: 100%;
+  overflow-x: auto;
 }
 
 .md-content th,
